# moonphase

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
docs/: notes.md
docs/specs/: primary.md
docs/superpowers/plans/: 2026-05-29-giant-heatmap-cell-times.md  2026-05-29-phase1-precise-events-core.md  2026-05-29-phase2-time-handling.md  2026-05-29-phase3-renderers-layouts.md  2026-05-29-phase4-custom-labels.md  2026-05-30-transition-peak-label.md  2026-06-06-moon-mother-labels.md
docs/superpowers/specs/: 2026-05-29-giant-heatmap-cell-times-design.md  2026-05-29-spec-refinement-design.md  2026-05-30-transition-peak-label-design.md  2026-06-06-moon-mother-labels-design.md
examples/: moon-mother-16.csv
samples/: README.md  labels-16-compact.txt  labels-16.txt  labels-8-short.txt
src/moonphase/: __init__.py  calendar.py  cli.py  displaytz.py  ephemeris.py  events.py  heatmap_layout.py  labels.py  microphase.py  moondisk.py  naming.py  report.py  theme.py
src/moonphase/renderers/: __init__.py  almanac.py  celltext.py  chart.py  chrome.py  data.py  heatmap.py  terminal.py
tests/: test_celltext.py  test_chrome.py  test_cli.py  test_displaytz.py  test_events.py  test_heatmap_layout.py  test_labels.py  test_microphase.py  test_moondisk.py  test_naming.py  test_registry.py  test_renderers.py  test_report.py  test_theme.py
